# excalidraw-cli

./: README.md  pyproject.toml
examples/: architecture.excli.yaml  saas-platform.excli.yaml  simple-flow.excli.yaml
excli/: __init__.py  __main__.py  backend.py  cli.py  diagram.py  elements.py  flow.py  templates.py
